--- a/prueba-concepto-2/index.html
+++ b/prueba-concepto-2/index.html
@@ -7,8 +7,8 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app">
-      <h1>TypeScript Sandbox</h1>
+    <div id="carta" class="carta">
+      <img src="src/img/back.png" id="imagenCarta" alt="carta" />
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
