--- a/prueba-concepto-4/index.html
+++ b/prueba-concepto-4/index.html
@@ -7,8 +7,21 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app">
-      <h1>TypeScript Sandbox</h1>
+    <div class="grid">
+      <div class="carta" id="carta1">
+        <img
+          src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
+          id="imagenCarta1"
+          alt="carta"
+        />
+      </div>
+      <div class="carta" id="carta2">
+        <img
+          src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
+          id="imagenCarta2"
+          alt="carta"
+        />
+      </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
