Mejora prueba concepto 4

--- a/prueba-concepto-4/index.html
+++ b/prueba-concepto-4/index.html
@@ -9,18 +9,10 @@
   <body>
     <div class="grid">
       <div class="carta" id="carta1">
-        <img
-          src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-          id="imagenCarta1"
-          alt="carta"
-        />
+        <img src="" id="imagenCarta1" alt="carta" />
       </div>
       <div class="carta" id="carta2">
-        <img
-          src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-          id="imagenCarta2"
-          alt="carta"
-        />
+        <img src="" id="imagenCarta2" alt="carta" />
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
