mejoras prueba concepto 2

--- a/prueba-concepto-2/index.html
+++ b/prueba-concepto-2/index.html
@@ -8,11 +8,7 @@
   </head>
   <body>
     <div id="carta" class="carta">
-      <img
-        src="data:image/gif;base64,R0lGODlhAQABAAD/ACwAAAAAAQABAAACADs="
-        id="imagenCarta"
-        alt="carta"
-      />
+      <img src="" id="imagenCarta" alt="carta" />
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
