--- a/prueba-concepto-5/index.html
+++ b/prueba-concepto-5/index.html
@@ -7,9 +7,7 @@
     <title>Vite + TS</title>
   </head>
   <body>
-    <div id="app">
-      <h1>TypeScript Sandbox</h1>
-    </div>
+    <div id="tablero" class="grid"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
