--- a/implementacion/index.html
+++ b/implementacion/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div id="app">
-      <h1>TypeScript Sandbox</h1>
+      <div id="tablero" class="grid"></div>
+      <div id="intentos" class="no-mostrar">Intentos: 0</div>
+      <button id="iniciarPartida">Iniciar Partida</button>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
